--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -13,6 +13,7 @@ comm==0.2.2
 cryptography==43.0.0
 debugpy==1.8.6
 decorator==5.1.1
+detect-secrets==1.5.0
 distlib==0.3.8
 Django==4.2.6
 django-cors-headers==4.4.0
@@ -69,6 +70,7 @@ pyasn1_modules==0.4.0
 pycparser==2.22
 pydantic==2.8.2
 pydantic_core==2.20.1
+pydub==0.25.1
 Pygments==2.18.0
 PyJWT==2.8.0
 pyparsing==3.1.2
@@ -85,6 +87,7 @@ rsa==4.9
 setuptools==75.1.0
 six==1.16.0
 soupsieve==2.5
+SpeechRecognition==3.10.4
 sqlparse==0.5.1
 stack-data==0.6.3
 tornado==6.4.1
