--- a/client/package.json
+++ b/client/package.json
@@ -24,7 +24,6 @@
 
   "dependencies": {
 
-
     "@emotion/react": "^11.13.0",
 
     "@emotion/styled": "^11.13.0",
@@ -36,6 +35,8 @@
     "@mui/styled-engine-sc": "^6.0.0-alpha.18",
 
     "@mui/x-date-pickers": "^7.12.0",
+
+    "@radix-ui/react-dropdown-menu": "^2.1.2",
 
     "@radix-ui/react-hover-card": "^1.1.1",
 
@@ -52,6 +53,10 @@
     "@react-three/drei": "^9.109.2",
 
     "@react-three/fiber": "^8.16.8",
+
+    "@stream-io/node-sdk": "^0.4.4",
+
+    "@stream-io/video-react-sdk": "^1.6.1",
 
     "@tabler/icons-react": "^3.12.0",
 
@@ -95,6 +100,10 @@
 
     "react": "^18",
 
+    "react-date-picker": "^11.0.0",
+
+    "react-datepicker": "^7.4.0",
+
     "react-day-picker": "^8.10.1",
 
     "react-dom": "^18",
@@ -117,6 +126,8 @@
 
     "socket.io-client": "^4.7.5",
 
+    "stream": "^0.0.3",
+
     "styled-components": "^6.1.12",
 
     "tailwind-merge": "^2.5.3",
@@ -125,13 +136,13 @@
 
     "three": "^0.167.0",
 
-    "zod": "^3.23.8"
+    "token-stream": "^1.0.0",
 
+    "zod": "^3.23.8"
 
   },
 
   "devDependencies": {
-
 
     "@types/node": "20.16.5",
 
@@ -148,7 +159,6 @@
     "tailwindcss": "^3.4.1",
 
     "typescript": "5.6.2"
-
 
   }
 
